[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/main_menu/buttons/BackToTitleScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_themes/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/UI/ui_panel.png" type="Texture" id=3]
[ext_resource path="res://scripts/main_menu/LoadGameMenu.gd" type="Script" id=4]

[node name="LoadGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -380, -58 )
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 50.0
margin_right = -100.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveSelect" type="MarginContainer" parent="MarginContainer"]
margin_right = 824.0
margin_bottom = 510.0
custom_constants/margin_right = 226
custom_constants/margin_top = 50
custom_constants/margin_left = 226
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/SaveSelect"]
margin_left = 226.0
margin_top = 50.0
margin_right = 598.0
margin_bottom = 510.0
custom_constants/separation = 11
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/SaveSelect/VBoxContainer"]
margin_right = 372.0
margin_bottom = 28.0
text = "Save Select"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/SaveSelect/VBoxContainer"]
margin_top = 39.0
margin_right = 372.0
margin_bottom = 415.0
size_flags_vertical = 3
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/SaveSelect/VBoxContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveContainer" type="VBoxContainer" parent="MarginContainer/SaveSelect/VBoxContainer/NinePatchRect/ScrollContainer"]
margin_right = 360.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/SaveSelect/VBoxContainer"]
margin_top = 426.0
margin_right = 372.0
margin_bottom = 460.0
custom_constants/separation = 15
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/SaveSelect/VBoxContainer/HBoxContainer"]
margin_right = 178.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/SaveSelect/VBoxContainer/HBoxContainer/PlayButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "PLAY"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="MarginContainer/SaveSelect/VBoxContainer/HBoxContainer"]
margin_left = 193.0
margin_right = 372.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/SaveSelect/VBoxContainer/HBoxContainer/DeleteButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Delete"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToTitleScreen" parent="MarginContainer" instance=ExtResource( 1 )]

[connection signal="pressed" from="MarginContainer/SaveSelect/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/SaveSelect/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
